<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:menu="@menu/main_menu"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/ToolbarTitleTextStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="#7E7E7E">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/input_search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="#7E7E7E" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nationality"
                android:textSize="12sp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@null"
                android:clipToPadding="false"
                android:paddingHorizontal="14dp"
                app:tabIndicator="@drawable/tab_indicator_selector"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="center"
                app:tabIndicatorHeight="40dp"
                app:tabMode="scrollable"
                app:tabPaddingEnd="18dp"
                app:tabPaddingStart="18dp"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/TabTextStyle" />

            <TextView
                android:id="@+id/text_view_news_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"
                tools:text="News Total : 20" />

            <ProgressBar
                android:id="@+id/progress_bar_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="14dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="never"
                android:visibility="gone"
                tools:listitem="@layout/item_home_news" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/empty_view"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_margin="14dp"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/img_empty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oops"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/poppins_semibold" />

                <TextView
                    android:id="@+id/text_view_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/empty_text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>